Make it Responsive (footer not finish yet)

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           <li class="nav__item">
             <a class="nav__link" href="#section--3">Testimonials</a>
           </li>
-          <li class="nav__item">
+          <li class="nav__item link">
             <a class=" nav__link--btn btn--show-modal" href="#"
               >Open account</a
             >
           </li>
-          <li class="nav__item">
-            <a class="nav__log--in nav__link--btn" href="../Bankist/index.html">
+          <li class="nav__item link">
+            <a class="nav__link--btn nav__log--in " href="../Bankist/index.html">
               Log In</a>
           </li>
         </ul>
