--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Bankist | When Banking meets Minimalist</title>
-    <script defer src="index.js"></script>
+    <script defer src="script.js"></script>
   </head>
   <body>
     <header class="header">
@@ -331,7 +331,8 @@
           target="_blank"
           href='#'
           >Bankist Corporation</a
-        >.
+        >. 
+        Credit to Jonas Schmedtmann
       </p>
     </footer>
 
